Fixing atomicIncrement implementation for Windows by dropping support before XP SP2. https://bugs.webkit.org/show_bug.cgi?id=106740

Patch by Zoltan Arvai <zarvai@inf.u-szeged.hu> on 2013-01-27
Reviewed by Benjamin Poulain.

Source/JavaScriptCore:

* config.h:

Source/WebCore:

* WebCorePrefix.h:
* config.h:

Source/WebKit/win:

* WebKitPrefix.h:

Source/WebKit2:

* config.h:

Source/WTF:

Adding int64_t type atomicIncrement and atomicDecrement implementations for Windows
into Atomics.h required by WebKit2 after r139514. Separating WinCE implementation
that does not support WebKit2 and has no support for 64 bit interlocked methods.

Increasing WINVER and _WIN32_WINNT to XP SP2, because the 64 bit type interlocked methods
are not supported on previous versions on 32 bit target.

* config.h:
* wtf/Atomics.h:
(WTF):
(WTF::atomicIncrement):
(WTF::atomicDecrement):

Tools:

* DumpRenderTree/config.h:
* WinLauncher/stdafx.h:

Canonical link: https://commits.webkit.org/126239@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@140930 268f45cc-cd09-0410-ab3c-d52691b4dbfc