Source/WebKit2/config.h
@@ -62,11 +62,11 @@ static const type& name() \
 #if defined(WIN32) || defined(_WIN32)
 
 #ifndef _WIN32_WINNT
-#define _WIN32_WINNT 0x0500
+#define _WIN32_WINNT 0x0502
 #endif
 
 #ifndef WINVER
-#define WINVER 0x0500
+#define WINVER 0x0502
 #endif
 
 /* If we don't define these, they get defined in windef.h. */
