Tools/DumpRenderTree/config.h
@@ -85,10 +85,10 @@
 #endif
 
 #undef _WIN32_WINNT
-#define _WIN32_WINNT 0x0500
+#define _WIN32_WINNT 0x0502
 
 #undef WINVER
-#define WINVER 0x0500
+#define WINVER 0x0502
 
 #undef _WINSOCKAPI_
 #define _WINSOCKAPI_ // Prevent inclusion of winsock.h in windows.h
