Tools/WinLauncher/stdafx.h
@@ -32,12 +32,12 @@
 
 // Modify the following defines if you have to target a platform prior to the ones specified below.
 // Refer to MSDN for the latest info on corresponding values for different platforms.
-#ifndef WINVER                // Allow use of features specific to Windows XP or later.
-#define WINVER 0x0501        // Change this to the appropriate value to target other versions of Windows.
+#ifndef WINVER // Allow use of features specific to Windows XP SP2 or later.
+#define WINVER 0x0502 // Change this to the appropriate value to target other versions of Windows.
 #endif
 
-#ifndef _WIN32_WINNT        // Allow use of features specific to Windows XP or later.                   
-#define _WIN32_WINNT 0x0501    // Change this to the appropriate value to target other versions of Windows.
+#ifndef _WIN32_WINNT // Allow use of features specific to Windows XP SP2 or later.
+#define _WIN32_WINNT 0x0502 // Change this to the appropriate value to target other versions of Windows.
 #endif                        
 
 #ifndef _WIN32_WINDOWS        // Allow use of features specific to Windows 98 or later.
